--- a/public/src/css/custom.css
+++ b/public/src/css/custom.css
@@ -1,3 +1,86 @@
 .reg-form {
   display: none;
 }
+
+h4.name {
+  font-size: 15px;
+  margin-left: 04px;
+  margin-top: 8px;
+
+}
+
+ul>li>a {
+  font-size: 15px;
+}
+
+ul>li>a>i {
+  font-size: 20px;
+}
+
+ul>li>h3 {
+  font-size: 17px;
+}
+
+ul>li {
+  transition: .5s all;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+ul>li:hover {
+  background: #c0c0c062;
+  color: #fff;
+}
+
+table>tbody>tr {
+  padding: 30px !important;
+}
+
+@media all and (max-width: 992px) {
+  ul>li>a>span {
+    display: none;
+  }
+
+  ul>li>a>i {
+    font-size: 25px;
+  }
+
+
+  ul {
+    justify-content: center;
+    align-items: center;
+  }
+
+  ul>li {
+    padding-left: 0px;
+  }
+
+  ul>.separator-heading {
+    display: none;
+    margin-top: -20px;
+
+  }
+
+  h4.name {
+    display: none;
+  }
+
+}
+
+.action-button>li {
+  cursor: pointer;
+
+}
+
+.action-button>li:hover {
+  background: transparent;
+}
+
+.fa-circle {
+  font-size: 10px;
+}
+
+#student-add-form {
+  display: none;
+}
