--- a/public/src/css/custom.css
+++ b/public/src/css/custom.css
@@ -177,3 +177,17 @@ td.no-data {
   width: 60%;
   /* Could be adjusted to your liking */
 }
+
+#studentResultAddModal {
+  display: none;
+}
+
+#studentResultAddModal .modal-content {
+  background-color: #fefefe;
+  margin: 9% auto;
+  /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+  /* Could be adjusted to your liking */
+}
