Changed Some colors

--- a/public/src/scss/main.scss
+++ b/public/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import "./body/body";
 @import "./footer/footer";
 
-* {
-  margin: auto;
-  padding: auto;
-}
+// * {
+//   margin: auto;
+//   padding: auto;
+// }
